# Potato

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  docker-compose.yml  get-cmake.sh
.github/workflows/: ccpp.yml
Docker/: Dockerfile  requirements.txt
debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/spdlog/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: Endpoint.cpp  Endpoint.h  Exception.h  Log.cpp  Log.h  Request.cpp  Request.h  Server.cpp  Server.h  Socket.cpp  Socket.h  Utill.cpp  Utill.h  main.cpp
test/: CMakeLists.txt  Test.cpp  TestEndpoint.cpp  TestRequest.cpp  TestUtill.cpp
test/EndToEnd/: EndToEndTest.py
